--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
 <head>
+	<link 
+		  href='https://fonts.googleapis.com/css?family=Butcherman' rel='stylesheet'>
 <style>
 	body {
 	background-color:#FFE3ED;
+		font-family:font-family: 'Butcherman';font-size: 22px;	
 }
 #container{
 	width:960px;
@@ -46,8 +49,6 @@ background-color:#000000;
 img {
   float:inherit;
 }
-
-	
 	
 	</style>
 <meta charset="UTF-8">
@@ -59,13 +60,13 @@ img {
 		<header> <h1> <center> Vixxen Lash Co.</center></h1></header>
 		
 			<nav><center>
-				<a href="assets/images/luxxbeautybrochure.pptx"> Shop.</a> 
-				<a href="assets/images/luxxbeautybrochure.pptx"> New Arrivals.</a>
-				<a href="assets/images/luxxbeautybrochure.pptx"> Sale. </a> 
-				</center>
-	</nav><article> 
-			<p><font color="#FFFFFF"></font>ose Vixxen Lash Co. and Seduce with every blink!<img src="assets/images/vixxenlogo.png" width="474" height="300px"></p>
-				</article>
+				<a href="assets/images/luxxbeautybrochure.pptx"> | Shop |</a> 
+				<a href="assets/images/luxxbeautybrochure.pptx"> New Arrivals | </a>
+				<a href="assets/images/luxxbeautybrochure.pptx"> Sale | </a> 
+				</center>		
+	</nav>
+		  <center><p><font color="#FFFFFF"> <h3>Chose Vixxen Lash Co. and Seduce with every blink!</h3></font></p></center>
+			<article><img src="assets/images/vixxenlogo.png" width="459" height="300px"></article>
 			
 						
 		 
