--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ section{
 }
 	article{
 	background-color:#000000;
-	width: 300%;
+	width: 200%;
 	height:400px;
 		float:right;
 		 align-content: center;
@@ -51,7 +51,7 @@ height: 100px;
 background-color:#000000;
 }
 img {
-  float:none;
+  float:left;
 }
 	
 	</style>
@@ -77,7 +77,9 @@ img {
 		 
 		  <center><p><font color="#FFFFFF"> <h3> Vixxen Lash Co. and Seduce with every blink!</h3></font></p></center>
 			<article>
-				<center><img src="assets/images/vixxenlogo.png" width="459" height="300px"></center></article>
+				<img src="assets/images/vixxenlogo.png" width="459" height="300px">
+				</article>
+			
 			
 	</div>			
 		 
