--- a/index.html
+++ b/index.html
@@ -1,114 +1,10 @@
 <!doctype html>
 <html>
 <head>
-	<link 
-		  href="https://fonts.googleapis.com/css?family=Butcherman' rel='stylesheet">
-<style>
-	body {
-	background-color:#FFE3ED;
-		font-family:font-family: 'Butcherman';font-size: 22px;	
-}
-#container{
-	width:600px;
-	margin: auto 0
-}
-header{
-	width: 200%;
-	height: 200px;
-	background-image:url("assets/images/vixxenpacking.png");
-	background-repeat:repeat;
-	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
-	font-size: 45px;	
-}
-	nav{
-	margin: 10px;
-	padding: 20px;
-		background-color:#FFFFFF;
-	width: 2000px;
-	height:10px;
-	float:none;
-}
-section{
-	margin: 100px;
-	padding: 10px;
-	background-color:#FFFFFF;
-	width: 1000px;
-	height:200px;
-
-}
-	article{
-	background-color:#000000;
-	width: 200%;
-	height:400px;
-		float:right;
-		 align-content: center;	
-		
-}
-footer{
-	width: 1000%;
-height: 100px;
-background-color:#000000;
-}
-img {
-  float: right;
-}
-	
-	</style>
-<link href="jQueryAssets/jquery.ui.core.min.css" rel="stylesheet" type="text/css">
-<link href="jQueryAssets/jquery.ui.theme.min.css" rel="stylesheet" type="text/css">
-<link href="jQueryAssets/jquery.ui.button.min.css" rel="stylesheet" type="text/css">
-<link href="jQueryAssets/jquery.ui.dialog.min.css" rel="stylesheet" type="text/css">
-<link href="jQueryAssets/jquery.ui.resizable.min.css" rel="stylesheet" type="text/css">
 <meta charset="UTF-8">
-<title>css1</title>
-<script src="jQueryAssets/jquery-1.11.1.min.js"></script>
-<script src="jQueryAssets/jquery.ui-1.10.4.button.min.js"></script>
-<script src="jQueryAssets/jquery.ui-1.10.4.dialog.min.js"></script>
+<title>index</title>
 </head>
-	<body>
-		<div id="container">
-	<button id="Button2">Free shipping over $45</button>
-	
-<header> <h1> <center> Vixxen Lash Co.</center></h1></header>
-		
-		  <nav><center>
-				<a href="assets/images/luxxbeautybrochure.pptx"> | Shop |</a> 
-				<a href="assets/images/luxxbeautybrochure.pptx"> New Arrivals | </a>
-				<a href="assets/images/luxxbeautybrochure.pptx"> Sale | </a> 
-				</center>		
-	</nav>
-		 
-		  <center><p><font color="#FFFFFF"> <h3>Shop Vixxen Lash Co. and Seduce with every blink!</h3></font>
-			  
-		   
-	      </p></center>
-			<article>
-				<img src="assets/images/vixxenlogo.png" width="459" height="300px">
-		  </article>	
-			
-	</div>			
-		 
-<center> <h2>Featured Products </h2> </center>
-		<center><button id="Button1">Shop Now</button></center>
-			
-			<section> 
-<center><img src="assets/images/eyelash.jpg" height="200px">
-			<img src="assets/images/vixxenpacking.png" width="200px" height="200px">
-	<img src="assets/images/vixxenset.png" width="220" height="200px"> 
-<img src="assets/images/lashextentshop.jpg" height="200px"></center>
-		</section>
-	<footer></footer>
-            <script type="text/javascript">
-$(function() {
-	$( "#Button1" ).button(); 
-});
-$(function() {
-	$( "#Dialog1" ).dialog(); 
-});
-$(function() {
-	$( "#Button2" ).button(); 
-});
-            </script>
-	</body>
-	
-	</html>
+
+<body>
+</body>
+</html>
